<resources>
    <string name="app_name">RadioButtonHW</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="regularticket">Regular Ticket</string>
    <string name="childticket">Children Ticket</string>
    <string name="studentticket">Student Ticket</string>
    <string name="NumberOfSheets">Count :</string>
    <string name="confirn">confirn</string>
    <string name="choose">choose</string>
    <string name="close">close</string>
    <string name="ticketType">Ticket Type :</string>
    <string name="total">Total</string>
    <string name="gender">Gender</string>
    <string name="detail">Detail</string>
</resources>